--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,17 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js",
     "dev": "nodemon index.js"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!your-esm-package)"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -22,5 +30,11 @@
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "prisma": "^5.21.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
