--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,8 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
-    "prisma": "^5.21.1"
+    "prisma": "^5.21.1",
+    "selenium-webdriver": "^4.27.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
